CHANGES
=======

* fix: use dict\_to\_object for DTO feeding
* fix: Aysnc alien call fix for form-data when there is no form data
* feat: ApiError now supports severity
* feat: Add form data capability for swagger call
* feat: Capability of parsing dict
* feat: broker publish now can get headers
* fix: date/time json serialization for timezone
* feat: Add timezone and calendar features for serialization flags
* fix: First time pooling fixed
* fix: Check if connection pool is empty
* refactor: Remove unneeded import
* fix: default values for pool parameters
* feat: Broker pool recycle
* fix: Broker channel close
* feat: Add changelog
* fix: Revise broker connection pool
* Update .gitlab-ci.yml
* Update .gitlab-ci.yml
* Update .gitlab-ci.yml
* feat: Add broker publish support
* fix: Return error for alien\_call
* fix: Locale and Accept-Language fixture
* Update .gitlab-ci.yml
* Update .gitlab-ci.yml
* Update .gitlab-ci.yml
* Update .gitlab-ci.yml

1.12.1
------

* Update .gitlab-ci.yml
* fix: Check payload type fix
* Add new file
* Update .gitlab-ci.yml
* Update .gitlab-ci.yml
* Update .gitlab-ci.yml
* feat: Automatically convert payload to dict to inter-service operations
* Update .gitlab-ci.yml
* Update .gitlab-ci.yml
* feat: Add SqlAlchemy hybrid properties support to create\_mapping

1.12.0
------

* fix: Service invoker does not try to convert objects to dict if status code is not 200

1.11.6
------


1.11.5
------

* fix: Register ApiError but no other errors in production mode
* fix: Flask\_Env instead of Env

1.11.4
------


1.11.3
------

* fix: dict\_to\_object revised for parse\_value

1.11.2
------

* feat: Add locale and format to service invoker

1.11.1
------

* fix: Error handling omitted in development mode

1.11.0
------

* feat: Add typed result to invoker. Fix Odata param

1.10.2
------

* fix: Raise error when swagger operation not found

1.10.1
------

* fix: Revert teardown
* fix: Rollback transaction in case of request teardown

1.10.0
------
