@@ -25,3 +25,4 @@ requests
 NumPy
 redis
 aioredis
+durations
